upgrade A2 and A3 tasks to 2019 version (solutions are not updated yet)

--- a/assignment3/Generative_Adversarial_Networks_PyTorch.ipynb
+++ b/assignment3/Generative_Adversarial_Networks_PyTorch.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Generative Adversarial Networks (GANs)\n",
     "\n",
-    "So far in CS231N, all the applications of neural networks that we have explored have been **discriminative models** that take an input and are trained to produce a labeled output. This has ranged from straightforward classification of image categories to sentence generation (which was still phrased as a classification problem, our labels were in vocabulary space and we\u2019d learned a recurrence to capture multi-word labels). In this notebook, we will expand our repetoire, and build **generative models** using neural networks. Specifically, we will learn how to build models which generate novel images that resemble a set of training images.\n",
+    "So far in CS231N, all the applications of neural networks that we have explored have been **discriminative models** that take an input and are trained to produce a labeled output. This has ranged from straightforward classification of image categories to sentence generation (which was still phrased as a classification problem, our labels were in vocabulary space and we’d learned a recurrence to capture multi-word labels). In this notebook, we will expand our repetoire, and build **generative models** using neural networks. Specifically, we will learn how to build models which generate novel images that resemble a set of training images.\n",
     "\n",
     "### What is a GAN?\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "Here's an example of what your outputs from the 3 different models you're going to train should look like... note that GANs are sometimes finicky, so your outputs might not look exactly like this... this is just meant to be a *rough* guideline of the kind of quality you can expect:\n",
     "\n",
-    "![caption](gan_outputs_pytorch.png)"
+    "![caption](../img/gan_outputs_pytorch.png)"
    ]
   },
   {
@@ -212,9 +212,11 @@
     "    - A PyTorch Tensor of shape (batch_size, dim) containing uniform\n",
     "      random noise in the range (-1, 1).\n",
     "    \"\"\"\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -350,9 +352,11 @@
     "    Build and return a PyTorch model implementing the architecture above.\n",
     "    \"\"\"\n",
     "    model = nn.Sequential(\n",
-    "            # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "            # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "            pass\n",
-    "\n            # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "            # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    )\n",
     "    return model"
    ]
@@ -408,9 +412,11 @@
     "    Build and return a PyTorch model implementing the architecture above.\n",
     "    \"\"\"\n",
     "    model = nn.Sequential(\n",
-    "            # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "            # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "            pass\n",
-    "\n            # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "            # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    )\n",
     "    return model"
    ]
@@ -735,9 +741,11 @@
     "    - loss: A PyTorch Tensor containing the loss.\n",
     "    \"\"\"\n",
     "    loss = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return loss\n",
     "\n",
     "def ls_generator_loss(scores_fake):\n",
@@ -837,9 +845,11 @@
     "    the architecture above.\n",
     "    \"\"\"\n",
     "    return nn.Sequential(\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    )\n",
     "\n",
     "data = next(enumerate(loader_train))[-1][0].type(dtype)\n",
@@ -905,9 +915,11 @@
     "    the architecture described above.\n",
     "    \"\"\"\n",
     "    return nn.Sequential(\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    )\n",
     "\n",
     "test_g_gan = build_dc_generator().type(dtype)\n",
@@ -1021,18 +1033,6 @@
     "\n",
     "### Your answer: \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "tags": [
-     "pdf-inline"
-    ]
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1051,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
