--- a/assignment3/Generative_Adversarial_Networks_TF.ipynb
+++ b/assignment3/Generative_Adversarial_Networks_TF.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "# Generative Adversarial Networks (GANs)\n",
-    "So far in CS231N, all the applications of neural networks that we have explored have been **discriminative models** that take an input and are trained to produce a labeled output. This has ranged from straightforward classification of image categories to sentence generation (which was still phrased as a classification problem, our labels were in vocabulary space and we\u2019d learned a recurrence to capture multi-word labels). In this notebook, we will expand our repetoire, and build **generative models** using neural networks. Specifically, we will learn how to build models which generate novel images that resemble a set of training images."
+    "So far in CS231N, all the applications of neural networks that we have explored have been **discriminative models** that take an input and are trained to produce a labeled output. This has ranged from straightforward classification of image categories to sentence generation (which was still phrased as a classification problem, our labels were in vocabulary space and we’d learned a recurrence to capture multi-word labels). In this notebook, we will expand our repetoire, and build **generative models** using neural networks. Specifically, we will learn how to build models which generate novel images that resemble a set of training images."
    ]
   },
   {
@@ -48,7 +48,7 @@
     "\n",
     "Example pictures of what you should expect (yours might look slightly different):\n",
     "\n",
-    "![caption](gan_outputs_tf.png)\n"
+    "![caption](../img/gan_outputs_tf.png)\n"
    ]
   },
   {
@@ -206,9 +206,11 @@
     "    TensorFlow Tensor with the same shape as x\n",
     "    \"\"\"\n",
     "    # TODO: implement leaky ReLU\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -256,9 +258,11 @@
     "    TensorFlow Tensor containing uniform noise in [-1, 1] with shape [batch_size, dim]\n",
     "    \"\"\"\n",
     "    # TODO: sample and return noise\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -329,9 +333,11 @@
     "    \"\"\"\n",
     "    model = tf.keras.models.Sequential([\n",
     "        # TODO: implement architecture\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ])\n",
     "    return model"
    ]
@@ -393,9 +399,11 @@
     "    \"\"\"\n",
     "    model = tf.keras.models.Sequential([\n",
     "        # TODO: implement architecture\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ])\n",
     "    return model"
    ]
@@ -457,9 +465,11 @@
     "    - loss: Tensor containing (scalar) the loss for the discriminator.\n",
     "    \"\"\"\n",
     "    loss = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return loss\n",
     "\n",
     "def generator_loss(logits_fake):\n",
@@ -473,9 +483,11 @@
     "    - loss: PyTorch Tensor containing the (scalar) loss for the generator.\n",
     "    \"\"\"\n",
     "    loss = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return loss"
    ]
   },
@@ -542,9 +554,11 @@
     "    \"\"\"\n",
     "    D_solver = None\n",
     "    G_solver = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return D_solver, G_solver"
    ]
   },
@@ -687,9 +701,11 @@
     "    - loss: A Tensor containing the loss.\n",
     "    \"\"\"\n",
     "    loss = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return loss\n",
     "\n",
     "def ls_generator_loss(scores_fake):\n",
@@ -703,9 +719,11 @@
     "    - loss: A Tensor containing the loss.\n",
     "    \"\"\"\n",
     "    loss = None\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return loss"
    ]
   },
@@ -802,9 +820,11 @@
     "    \"\"\"\n",
     "    model = tf.keras.models.Sequential([\n",
     "        # TODO: implement architecture\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ])\n",
     "    return model\n",
     "\n",
@@ -853,9 +873,11 @@
     "    \"\"\"\n",
     "    model = tf.keras.models.Sequential()\n",
     "    # TODO: implement architecture\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    return model\n",
     "test_generator(6595521)"
    ]
@@ -983,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
