--- a/assignment3/NetworkVisualization-PyTorch.ipynb
+++ b/assignment3/NetworkVisualization-PyTorch.ipynb
@@ -272,9 +272,11 @@
     "    # scores (we'll combine losses across a batch by summing), and then compute  #\n",
     "    # the gradients with a backward pass.                                        #\n",
     "    ##############################################################################\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ##############################################################################\n",
     "    #                             END OF YOUR CODE                               #\n",
     "    ##############################################################################\n",
@@ -386,9 +388,11 @@
     "    # in fewer than 100 iterations of gradient ascent.                           #\n",
     "    # You can print your progress over iterations to check your algorithm.       #\n",
     "    ##############################################################################\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ##############################################################################\n",
     "    #                             END OF YOUR CODE                               #\n",
     "    ##############################################################################\n",
@@ -574,9 +578,11 @@
     "        # L2 regularization term!                                              #\n",
     "        # Be very careful about the signs of elements in your code.            #\n",
     "        ########################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ########################################################################\n",
     "        #                             END OF YOUR CODE                         #\n",
     "        ########################################################################\n",
@@ -654,15 +660,6 @@
     "print(class_names[target_y])\n",
     "X = create_class_visualization(target_y, model, dtype)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -681,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
