--- a/assignment3/NetworkVisualization-TensorFlow.ipynb
+++ b/assignment3/NetworkVisualization-TensorFlow.ipynb
@@ -211,7 +211,7 @@
     "    # TODO: Produce the saliency maps over a batch of images.                     #\n",
     "    #                                                                             #\n",
     "    # 1) Define a gradient tape and watch input Image variable                    #\n",
-    "    # 2) Compute the \u201closs\u201d for the batch of given input images.                  #\n",
+    "    # 2) Compute the “loss” for the batch of given input images.                  #\n",
     "    #    - get scores output by the model for the given batch of input images     #\n",
     "    #    - use tf.gather_nd or tf.gather to get correct scores  \n",
     "    # 3) Use tf.gradients to compute the gradient of the loss with respect        #\n",
@@ -223,9 +223,11 @@
     "    # HINT: Use tf.GradientTape() to keep track of your gradients and             #\n",
     "    # use tape.gradient to get the actual gradient with respect to X_fooling.     #\n",
     "    ###############################################################################\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ##############################################################################\n",
     "    #                             END OF YOUR CODE                               #\n",
     "    ##############################################################################\n",
@@ -343,9 +345,11 @@
     "    # in fewer than 100 iterations of gradient ascent. You can print your        #\n",
     "    # progress over iterations to check your algorithm.                          #\n",
     "    ##############################################################################\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ##############################################################################\n",
     "    #                             END OF YOUR CODE                               #\n",
     "    ##############################################################################\n",
@@ -530,9 +534,11 @@
     "        #                                                                      #\n",
     "        # Be very careful about the signs of elements in your code.            #\n",
     "        ########################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ############################################################################\n",
     "        #                             END OF YOUR CODE                             #\n",
     "        ############################################################################\n",
@@ -595,13 +601,6 @@
     "print(class_names[target_y])\n",
     "X = create_class_visualization(target_y, model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -620,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
