--- a/assignment3/StyleTransfer-PyTorch.ipynb
+++ b/assignment3/StyleTransfer-PyTorch.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Here's an example of the images you'll be able to produce by the end of this notebook:\n",
     "\n",
-    "![caption](example_styletransfer.png)\n"
+    "![caption](../img/example_styletransfer.png)\n"
    ]
   },
   {
@@ -250,9 +250,11 @@
     "    Returns:\n",
     "    - scalar content loss\n",
     "    \"\"\"\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -332,9 +334,11 @@
     "    - gram: PyTorch Tensor of shape (N, C, C) giving the\n",
     "      (optionally normalized) Gram matrices for the N input images.\n",
     "    \"\"\"\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -397,9 +401,11 @@
     "    \"\"\"\n",
     "    # Hint: you can do this with one for loop over the style layers, and should\n",
     "    # not be very much code (~5 lines). You will need to use your gram_matrix function.\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -472,9 +478,11 @@
     "      for img weighted by tv_weight.\n",
     "    \"\"\"\n",
     "    # Your implementation should be vectorized and not require any loops!\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -740,15 +748,6 @@
     "\n",
     "style_transfer(**params_inv)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -767,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
