--- a/assignment3/StyleTransfer-TensorFlow.ipynb
+++ b/assignment3/StyleTransfer-TensorFlow.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Here's an example of the images you'll be able to produce by the end of this notebook:\n",
     "\n",
-    "![caption](example_styletransfer.png)\n",
+    "![caption](../img/example_styletransfer.png)\n",
     "\n"
    ]
   },
@@ -156,9 +156,11 @@
     "    Returns:\n",
     "    - scalar content loss\n",
     "    \"\"\"\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -263,9 +265,11 @@
     "    - gram: Tensor of shape (C, C) giving the (optionally normalized)\n",
     "      Gram matrices for the input image.\n",
     "    \"\"\"\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -322,9 +326,11 @@
     "    \"\"\"\n",
     "    # Hint: you can do this with one for loop over the style layers, and should\n",
     "    # not be short code (~5 lines). You will need to use your gram_matrix function.\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -390,9 +396,11 @@
     "      for img weighted by tv_weight.\n",
     "    \"\"\"\n",
     "    # Your implementation should be vectorized and not require any loops!\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -662,13 +670,6 @@
     "\n",
     "style_transfer(**params_inv)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -687,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
