add A3 part 3 Network visualization, fooling

--- a/assignment2/ConvolutionalNetworks_solution_yorko.ipynb
+++ b/assignment2/ConvolutionalNetworks_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A2, part 4](http://cs231n.github.io/assignments2018/assignment2/). Convolutional Networks\n",
+    "# <center> cs231n. [A2, part 4](http://cs231n.github.io/assignments2019/assignment2/). Convolutional Networks\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
-    "\n",
-    "#### <center> **Solution by @yorko**\n",
+    "    \n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://yorko.github.io) (@yorko)**\n",
     "\n",
     "So far we have worked with deep fully-connected networks, using them to explore different optimization strategies and network architectures. Fully-connected networks are a good testbed for experimentation because they are very computationally efficient, but in practice all state-of-the-art results use convolutional networks instead.\n",
     "\n",
@@ -1250,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
