--- a/assignment2/Dropout_solution_yorko.ipynb
+++ b/assignment2/Dropout_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A2, part 3](http://cs231n.github.io/assignments2018/assignment2/). Dropout\n",
+    "# <center> cs231n. [A2, part 3](http://cs231n.github.io/assignments2019/assignment2/). Dropout\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "\n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://yorko.github.io) (@yorko)**\n",
     "    \n",
     "Dropout [1] is a technique for regularizing neural networks by randomly setting some features to zero during the forward pass. In this exercise you will implement a dropout layer and modify your fully-connected network to optionally use dropout.\n",
     "\n",
@@ -465,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
