--- a/assignment2/FullyConnectedNets_solution_yorko.ipynb
+++ b/assignment2/FullyConnectedNets_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A2, part 1](http://cs231n.github.io/assignments2018/assignment2/). Fully-Connected Neural Nets\n",
+    "# <center> cs231n. [A2, part 1](http://cs231n.github.io/assignments2019/assignment2/). Fully-Connected Neural Nets\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://yorko.github.io) (@yorko)**\n",
     "    \n",
     "In the previous homework you implemented a fully-connected two-layer neural network on CIFAR-10. The implementation was simple but not very modular since the loss and gradient were computed in a single monolithic function. This is manageable for a simple two-layer network, but would become impractical as we move to bigger models. Ideally we want to build networks using a more modular design so that we can implement different layer types in isolation and then snap them together into models with different architectures.\n",
     "\n",
@@ -1615,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
