--- a/assignment2/BatchNormalization_solution_yorko.ipynb
+++ b/assignment2/BatchNormalization_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A2, part 2](http://cs231n.github.io/assignments2018/assignment2/). Batch Normalization\n",
+    "# <center> cs231n. [A2, part 2](http://cs231n.github.io/assignments2019/assignment2/). Batch Normalization\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://yorko.github.io) (@yorko)**\n",
     "\n",
     "One way to make deep networks easier to train is to use more sophisticated optimization procedures such as SGD+momentum, RMSProp, or Adam. Another strategy is to change the architecture of the network to make it easier to train. \n",
     "One idea along these lines is batch normalization which was proposed by [3] in 2015.\n",
@@ -1056,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
