--- a/assignment2/PyTorch_solution_yorko.ipynb
+++ b/assignment2/PyTorch_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A2, part 5](http://cs231n.github.io/assignments2018/assignment2/). Training a ConvNet PyTorch\n",
+    "# <center> cs231n. [A2, part 5](http://cs231n.github.io/assignments2019/assignment2/). Training a ConvNet PyTorch\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://yorko.github.io) (@yorko)**\n",
     "\n",
     "In this notebook, you'll learn how to use the powerful PyTorch framework to specify a conv net architecture and train it on the CIFAR-10 dataset. "
    ]
@@ -1345,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
