A3 GAN solution added (version 2019)

--- a/assignment3/LSTM_Captioning_solution_yorko.ipynb
+++ b/assignment3/LSTM_Captioning_solution_yorko.ipynb
@@ -367,8 +367,10 @@
    "source": [
     "Recall that in an LSTM the input gate $i$, forget gate $f$, and output gate $o$ are all outputs of a sigmoid function. Why don't we use the ReLU activation function instead of sigmoid to compute these values? Explain.\n",
     "\n",
+    "<br>\n",
     "<font color='red'>**Answer:**</font></br>\n",
-    "These gates shall output values between 0 and 1. "
+    "\n",
+    "<font color='blue'>These gates shall output values between 0 and 1. </font>"
    ]
   },
   {
@@ -599,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
