--- a/assignment3/NetworkVisualization-PyTorch_yorko.ipynb
+++ b/assignment3/NetworkVisualization-PyTorch_yorko.ipynb
@@ -390,9 +390,17 @@
     "\n",
     "A friend of yours suggests that in order to find an image that maximizes the correct score, we can perform gradient ascent on the input image, but instead of the gradient we can actually use the saliency map in each step to update the image. Is this assertion true? Why or why not?\n",
     "\n",
-    "**Your Answer:** \n",
+    "<br>\n",
     "\n",
-    "That's not true, because while calculating saliency maps we lose information about indexes of channels with maximal values of gradient. Therefore we'll be obliged to update each channel in the same way, no good."
+    "<font color='red' >Answer:</font>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<font color='blue' >\n",
+    "\n",
+    "That's not true, because while calculating saliency maps we lose information about indexes of channels with maximal values of gradient. Therefore we'll be obliged to update each channel in the same way, no good.\n",
+    "\n",
+    "</font>"
    ]
   },
   {
