--- a/assignment3/RNN_Captioning_solution_yorko.ipynb
+++ b/assignment3/RNN_Captioning_solution_yorko.ipynb
@@ -900,10 +900,16 @@
     "\n",
     "Can you describe one advantage of an image-captioning model that uses a character-level RNN? Can you also describe one disadvantage? HINT: there are several valid answers, but it might be useful to compare the parameter space of word-level and character-level models.\n",
     "\n",
+    "<br>\n",
+    "\n",
     "<font color='red' >Answer:</font>\n",
     "\n",
+    "<br>\n",
+    "\n",
+    "<font color='blue'>\n",
     "Advantage: now the model can create words that it hasn't seen in the vocabulary.<br>\n",
-    "Disadvantage: training complexity\n"
+    "Disadvantage: training complexity\n",
+    "</font>"
    ]
   }
  ],
@@ -923,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
