add style transfer task, finish A3

--- a/assignment3/StyleTransfer-PyTorch_yorko.ipynb
+++ b/assignment3/StyleTransfer-PyTorch_yorko.ipynb
@@ -990,7 +990,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1079,6 +1081,13 @@
     "\n",
     "style_transfer(**params_inv)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
